IEP-449: Unused code removed